# uuv_base

robot_ws/: README.md
robot_ws/src/http_node/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/http_node/install/: local_setup.sh  setup.sh
robot_ws/src/http_node/install/http_node/share/http_node/: package.bash  package.zsh
robot_ws/src/http_node/launch/: web_node.launch
robot_ws/src/http_node/log/: latest_build
robot_ws/src/http_node/scripts/: run_webserver.sh  webserver.py
robot_ws/src/http_node/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/src/http_node/scripts/log/: latest_build
